[package]
name = "twee-v3"
version = "0.2.0"
edition = "2021"
authors = ["Redwarp <redwarp@gmail.com>"]
description = "A parser for the the twee 3 interactive fiction format"
readme = "./README.md"
license = "MIT"
keywords = ["twine", "twee-v3"]
categories = ["parser-implementations"]

[dependencies]
nom = "7.1"
serde_json = "1.0"
